# cs_work

./: .clangd  .gitignore  Makefile  cs_work.sln  test.cpp
COP2220/: .clangd  final_project.c  makefile  midterm.c  quiz3.c  struct_test.c  test.c  tomascode
COP2800/: BeerProject.java  BeerProjectIPO.txt  LeastExchange.java  LeastExchangeDesign.txt  hello.cpp
COP2800/AbstractClassAssignment/: Abstract UML.xlsx  Instrument.java  Piano.java  TestClass.java  Violin.java
COP2800/AssignmentFive/: Main.java  OtherClass.java
COP2800/Bicycle/: Bicycle.java  TestClasssBicycle.java
COP2800/EqualMethodAssignment/: Building.java  House.java  Office.java  TestClass.java  Trailer.java
COP2800/Exam2/: Date.java  Name.java  Student.java  (+2 more)
COP3502/: anatomy.py  bunny.py  echo.py  random.txt  ranged.py  splitting.py  sportsball.py  test.py  test3.py  ttt_gui.py  ttt_oop.py  welcome.py
COP3503/: lab1.cpp
COP3503/p3/: .clangd  CMakeLists.txt  Makefile
COP3503/p3/boards/: config.cfg
COP3503/p3/src/: Board.cpp  Board.h  Config.cpp  Config.h  Random.cpp  Random.h  Test.cpp  Test.h  TextureManager.cpp  TextureManager.h  TextureStore.cpp  TextureStore.h  Ui.cpp  Ui.h  main.cpp
COT3100/: logic.py
Foster/: Test.java  batter_Up.java  charlieQuebec.cpp  csproject.cpp  fitInTheBox.cpp  fitInTheBox.ilk  forLoopPatterns.java  homewardBound.cpp  speedTracker.java  test2.ilk
JavaScript/: test.cpp
Lockheed/: practice1.cpp
assembly/: hello.asm
html/: style.css  test.html
test/: .clangd  DynamicArray.cpp  DynamicArray.h  FartsSmell.txt  Stuff.java  Test.java  main.cpp  test.h
(+111 files in other folders)
